--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,10 @@ repositories {
     mavenCentral()
 }
 
+test {
+    useJUnitPlatform()
+}
+
 sourceSets {
     main {
         java {
@@ -19,6 +23,7 @@ sourceSets {
     }
 }
 dependencies {
-    testImplementation 'junit:junit:4.12'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.0'
+    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.5.0'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
 }
