--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
-group 'org.example'
-version '1.0-SNAPSHOT'
+group 'iP'
+version '0.1-alpha'
 
 repositories {
     mavenCentral()
