--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'application'
     id 'com.github.johnrengelman.shadow' version '5.1.0'
+    id 'checkstyle'
 }
 
 repositories {
@@ -35,6 +36,10 @@ shadowJar {
     archiveBaseName = "windycall"
     archiveClassifier = null
     archiveVersion = '1.0'
+}
+
+checkstyle {
+    toolVersion = '10.2'
 }
 
 run{
