--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,12 @@
 plugins {
     id 'java'
     id 'application'
+    id 'checkstyle'
     id 'com.github.johnrengelman.shadow' version '5.1.0'
+}
+
+checkstyle {
+    toolVersion = '10.2'
 }
 
 repositories {
@@ -54,3 +59,4 @@ shadowJar {
 run{
     standardInput = System.in
 }
+
