fix: Fix gradle.build to enable packaging of Babe into a jar file
Babe can be packaged with Shadow plugin in Gradle.
This commit fixes values in build.gradle for shadowJar and application.

--- a/build.gradle
+++ b/build.gradle
@@ -28,11 +28,11 @@ test {
 }
 
 application {
-    mainClassName = "seedu.duke.Duke"
+    mainClassName = "babe.Babe"
 }
 
 shadowJar {
-    archiveBaseName = "duke"
+    archiveBaseName = "babe"
     archiveClassifier = null
 }
 
