Add checkstyle.xml file and suppression.xml file for style checking
Using checkstyle.xml to check if the codes follow the required
rules. Several changes are made to cater the rules.

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,11 @@ plugins {
     id 'java'
     id 'application'
     id 'com.github.johnrengelman.shadow' version '5.1.0'
+    id 'checkstyle'
+}
+
+checkstyle {
+    toolVersion = '10.2'
 }
 
 repositories {
@@ -40,7 +45,6 @@ shadowJar {
 jar {
     manifest {
         attributes(
-                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
                 'Main-Class': 'Duke'
         )
     }
