Set up checkstyle with Gradle

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,11 @@ plugins {
     id 'java'
     id 'application'
     id 'com.github.johnrengelman.shadow' version '5.1.0'
+    id 'checkstyle'
+}
+
+checkstyle {
+    toolVersion = '10.2'
 }
 
 repositories {
@@ -25,6 +30,7 @@ shadowJar {
     archiveBaseName = "duke"
     archiveClassifier = null
 }
+
 
 run{
     standardInput = System.in
