--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,8 @@ test {
 }
 
 application {
-    mainClassName = "duke.Duke"
+    mainClassName = "duke.Launcher"
+    applicationDefaultJvmArgs = ['-Djdk.gtk.version=2', '-Djdk.gtk.verbose=true']
 }
 
 checkstyle {
