--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'application'
     id 'com.github.johnrengelman.shadow' version '5.1.0'
+    id 'checkstyle'
 }
 
 repositories {
@@ -28,12 +29,16 @@ test {
 }
 
 application {
-    mainClassName = "Meggy.Meggy"
+    mainClassName = "meggy.Launcher"
 }
 
 shadowJar {
     archiveBaseName = "Meggy"
     archiveClassifier = null
+}
+
+checkstyle {
+    toolVersion = '10.2'
 }
 
 run {
