--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ test {
 }
 
 application {
-    sourceSets.main.java.srcDirs = ['src']
+    sourceSets.main.java.srcDirs = ['src/main/java']
     mainClassName = "duke.Duke"
 }
 
