--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'application'
+    id 'checkstyle'
     id 'com.github.johnrengelman.shadow' version '5.1.0'
 }
 
@@ -28,14 +29,14 @@ test {
 }
 
 application {
-    mainClassName = "seedu.duke.Duke"
+    mainClassName = "page.Page"
 }
 
 shadowJar {
-    archiveBaseName = "duke"
+    archiveBaseName = "page"
     archiveClassifier = null
 }
 
-run{
+run {
     standardInput = System.in
 }
