A-CheckStyle: Use checkStyle to detect coding style violations.

--- a/build.gradle
+++ b/build.gradle
@@ -46,11 +46,15 @@ application {
     mainClassName = "seedu.duke.Duke"
 }
 
+checkstyle {
+    toolVersion = '10.2'
+}
+
 shadowJar {
     archiveBaseName = "duke"
     archiveClassifier = null
 }
 
-run{
+run {
     standardInput = System.in
 }
