Added javafx UI to application, main application in Duke and launched from Launcher. void print commands in Ui are now replaced to return strings.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ bin/
 /text-ui-test/ACTUAL.TXT
 text-ui-test/EXPECTED-UNIX.TXT
 data/
+src/main/java/JavaFxTrial.java
+src/main/java/JavaFxTrialLauncher.java
