Add GUI to Duke and fix minor issues
Duke is only works on CLI, minimizing user satisfaction.

Duke may seem unappealing to some users.

Let's,
* Integrate Javafx to give Duke a GUI
* Use fxml files to make code follow OOP principles better
* Update minor details like comments based on PR review feedback

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ bin/
 /text-ui-test/ACTUAL2.TXT
 text-ui-test/EXPECTED-UNIX.TXT
 /text-ui-test/data/duke.txt
-/data/duke.txt
+data/duke.txt
 
 # Others
 *.class
