--- a/build.gradle
+++ b/build.gradle
@@ -42,11 +42,11 @@ test {
 }
 
 application {
-    mainClassName = "elise.Main"
+    mainClassName = "elise.Launcher"
 }
 
 shadowJar {
-    archiveBaseName = "elise"
+    archiveBaseName = "elise-fat"
     archiveClassifier = null
 }
 
@@ -58,6 +58,13 @@ checkstyle {
     toolVersion = '10.2'
 }
 
-clean {
-    delete 'data'
+clean.doLast {
+    file('elise').deleteDir()
+}
+
+jar {
+    manifest {
+        attributes("Main-Class": "elise.Launcher")
+    }
+    archiveName 'elise.jar'
 }
