--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'application'
     id 'com.github.johnrengelman.shadow' version '5.1.0'
+    id 'checkstyle'
 }
 
 repositories {
@@ -34,6 +35,9 @@ application {
 shadowJar {
     archiveBaseName = "duke"
     archiveClassifier = null
+}
+checkstyle {
+    toolVersion = '10.2'
 }
 
 run {
