--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,9 +1,9 @@
-name: Java CI
+name: "Validate Gradle Wrapper"
 
 on: [push, pull_request]
 
 jobs:
-  build:
+  validation:
     strategy:
       matrix:
         platform: [ubuntu-latest, macos-latest, windows-latest]
