--- a/build.gradle
+++ b/build.gradle
@@ -46,12 +46,12 @@ application {
     mainClassName = "duke.Launcher"
 }
 
-jar {
+/*jar {
     manifest {
         attributes 'Main-Class': 'duke.Launcher'
     }
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
-}
+}*/
 
 shadowJar {
     archiveBaseName = "duke"
