--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ test {
 }
 
 application {
-    mainClassName = "duke.Duke"
+    mainClassName = "gui.Launcher"
 }
 
 checkstyle {
@@ -50,7 +50,7 @@ checkstyle {
 }
 
 shadowJar {
-    archiveBaseName = "duke.Duke"
+    archiveBaseName = "gui.Launcher"
     archiveClassifier = null
 }
 
