--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,11 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '5.1.0'
 }
 
+plugins {
+    id 'checkstyle'
+    // other plugins
+}
+
 repositories {
     mavenCentral()
 }
@@ -40,6 +45,10 @@ shadowJar {
 
 run{
     standardInput = System.in
+}
+
+checkstyle {
+    toolVersion = '10.2'
 }
 
 repositories {
