Edited gradle configs

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,10 @@ application {
     mainClassName = "launcher.Launcher"
 }
 
+run {
+    enableAssertions = true
+}
+
 shadowJar {
     archiveBaseName = "duke"
     archiveClassifier = null
