Add assert statements to code
Currently there are no assert statements to verify assumptions about the progam at runtime

Assertions can help detect bugs and invalid states in the code to assist in debugging

Let's add assertions to document important assumptions that should hold at various points in the code.

--- a/build.gradle
+++ b/build.gradle
@@ -48,14 +48,15 @@ test {
 }
 
 application {
-    mainClassName = "Duke"
+    mainClassName = "gui.Launcher"
 }
 
 shadowJar {
-    archiveBaseName = "Duke"
+    archiveBaseName = "Duke-Gerty"
     archiveClassifier = null
 }
 
 run{
     standardInput = System.in
+    enableAssertions = true
 }
