--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ test {
 }
 
 application {
-    mainClassName = "duke.Duke"
+    mainClassName = "duke.gui.Launcher"
 }
 
 shadowJar {
@@ -57,4 +57,5 @@ shadowJar {
 
 run{
     standardInput = System.in
+    enableAssertions = true
 }
