--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,14 @@ dependencies {
     implementation group: 'org.openjfx', name: 'javafx-graphics', version: javaFxVersion, classifier: 'linux'
 }
 
+
+
+run {
+    enableAssertions = true
+    standardInput = System.in
+}
+
+
 test {
     useJUnitPlatform()
 
@@ -57,6 +65,7 @@ checkstyle {
     toolVersion = '10.2'
 }
 
-run{
+run {
+    enableAssertions = true
     standardInput = System.in
 }
