--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ test {
 }
 
 application {
-    mainClassName = "seedu.lele.Lele"
+    mainClassName = "lele.Launcher"
 }
 
 shadowJar {
@@ -56,6 +56,6 @@ shadowJar {
     archiveClassifier = null
 }
 
-run{
+run {
     standardInput = System.in
 }
