--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ test {
         exceptionFormat "full"
         showCauses true
         showStackTraces true
-        showStandardStreams = false
+        showStandardStreams = true
     }
 }
 
