--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,11 @@ plugins {
     id 'java'
     id 'application'
     id 'com.github.johnrengelman.shadow' version '5.1.0'
+    id 'checkstyle'
+}
+
+checkstyle {
+    toolVersion = '10.6'
 }
 
 repositories {
@@ -54,3 +59,4 @@ shadowJar {
 run{
     standardInput = System.in
 }
+
