Revert main to d347412

--- a/build.gradle
+++ b/build.gradle
@@ -46,11 +46,11 @@ test {
 }
 
 application {
-    mainClassName = "pix.Launcher"
+    mainClassName = "seedu.duke.Duke"
 }
 
 shadowJar {
-    archiveBaseName = "Pix"
+    archiveBaseName = "duke"
     archiveClassifier = null
 }
 
