Change mainClassName to MainLauncher

--- a/build.gradle
+++ b/build.gradle
@@ -42,11 +42,11 @@ test {
 }
 
 application {
-    mainClassName = "duke"
+    mainClassName = "duke.MainLauncher"
 }
 
 shadowJar {
-    archiveBaseName = "duke"
+    archiveBaseName = "Duke"
     archiveClassifier = null
 }
 
