Implement assert check to make sure commands are properly processed @ parser.java, using gradle to run

--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ test {
     }
 }
 
+
 application {
     mainClassName = "Launcher"
 }
@@ -59,4 +60,5 @@ shadowJar {
 
 run{
     standardInput = System.in
+    enableAssertions = true
 }
