Add some assertions to index related methods.
Index related methods handle wrong index and out-of bound index using
exceptions.

Important assumptions in this part are not shown explicitly.

Let's add some assertions that explicitly shows these assumptions so
that it improves readability.

Using assertions in this case is preferable as it does convey assumption

--- a/build.gradle
+++ b/build.gradle
@@ -43,13 +43,13 @@ test {
 }
 
 application {
-    mainClassName = "windycall.WindyCall"
+    mainClassName = "javafx.Launcher"
 }
 
 shadowJar {
     archiveBaseName = "windycall"
     archiveClassifier = null
-    archiveVersion = '1.0'
+    archiveVersion = '1.1'
 }
 
 checkstyle {
