Generate new JAR file with JavaFX GUI
duke.jar is a command line app from Week 3.

The new duke.jar file allows the JavaFX GUI app to be used directly
without compiling the code.

--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ test {
 
 application {
     sourceSets.main.java.srcDirs = ['src/main/java']
-    mainClassName = "duke.Duke"
+    mainClassName = "duke.Launcher"
 }
 
 shadowJar {
