Added assertions method
Added asome assertions in the code to make sure no problems happen

These modifications are in another branch and will merge it with the master later

--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,9 @@ test {
         showStandardStreams = false
     }
 }
-
+run {
+    enableAssertions = true
+}
 application {
     mainClassName = "seedu.duke.Launcher"
 }
