--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id "com.github.johnrengelman.shadow" version "5.1.0"
     id 'java'
     id 'application'
     id 'org.javamodularity.moduleplugin' version '1.8.12'
