Improve code quality

--- a/build.gradle
+++ b/build.gradle
@@ -44,13 +44,13 @@ test {
 }
 
 application {
-    mainClassName = "duke.Duke"
+    mainClassName = "duke.Launcher"
 }
 
 shadowJar {
-    mainClassName = "duke.Duke"
+    mainClassName = "duke.Launcher"
     archiveBaseName = "duke"
-    archiveVersion = "v0.1"
+    archiveVersion = "v0.2"
     archiveClassifier = null
 }
 
