Fix some code quality issues

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,11 @@ src/main/resources/docs/
 # MacOS custom attributes files created by Finder
 .DS_Store
 *.iml
-bin/
+/bin/
 
+# text-ui-test
 /text-ui-test/ACTUAL.TXT
-text-ui-test/EXPECTED-UNIX.TXT
+/text-ui-test/EXPECTED-UNIX.TXT
+
+# Data
+/data/
